k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-frontend-service
spec:
  selector:
    app: mini-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
