k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  rules:
  - host: demo-multicloud.navillasa.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mini-frontend-service
            port:
              number: 80
